# pre-commit-django-check-migrations

./: .pre-commit-hooks.yaml  README.md  check_migrations_created.py  pyproject.toml
